# The-Hemat-Language

./: CMakeLists.txt  DOCS.md  README.md  syntax.hm  test.hm
src/: hematc.h  main.c
src/ast/: ast.c  ast.h
src/codegen/: codegen.c  codegen.h
src/command_parser/: command_parser.c  command_parser.h
src/hashtable/: hashtable.c  hashtable.h
src/lexer/: lexer.c  lexer.h  tokens.h
src/lexer/lexemes/: lexemes.c  lexemes.h
src/lexer/tokens/: tokens.c  tokens.h
src/parser/: parser.c  parser.h
src/parser/ast/: ast.c  ast.h
src/semantic/: semantic.c  semantic.h
src/symbol_table/: symbol_table.c  symbol_table.h
src/vector/: vector.c  vector.h
